@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*tlp-0.6-r1 (09 Oct 2014)
+  09 Oct 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.6-r1.ebuild,
+  -tlp-0.6.ebuild, tlp-9999.ebuild
+  Fix installation of openrc script, github issue #6 (dbordak)
+
 *tlp-0.6 (07 Oct 2014)
 
   07 Oct 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.6.ebuild, tlp-9999.ebuild
